Side loaded fonts should be case insensitive.

This is a source of webkit_layout_test flakiness on Windows.

Bug: 889608
Change-Id: Ib31cd068620d0c1917aaa85ce2ec7038ccd4236e
Reviewed-on: https://chromium-review.googlesource.com/1249385
Commit-Queue: Erik Chen <erikchen@chromium.org>
Reviewed-by: Emil A Eklund <eae@chromium.org>
Reviewed-by: Koji Ishii <kojii@chromium.org>
Cr-Commit-Position: refs/heads/master@{#594827}
Former-commit-id: 90d29c2c598796708cf504925c72f9cc89248291