third_party/blink/renderer/platform/fonts/skia/font_cache_skia.cc
@@ -262,8 +262,8 @@ sk_sp<SkTypeface> FontCache::CreateTypeface(
 #if defined(OS_WIN)
   // TODO(vmpstr): Deal with paint typeface here.
   if (sideloaded_fonts_) {
-    HashMap<String, sk_sp<SkTypeface>>::iterator sideloaded_font =
-        sideloaded_fonts_->find(name.data());
+    HashMap<String, sk_sp<SkTypeface>, CaseFoldingHash>::iterator
+        sideloaded_font = sideloaded_fonts_->find(name.data());
     if (sideloaded_font != sideloaded_fonts_->end())
       return sideloaded_font->value;
   }
